--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,18 @@ body, html {
 
 body { background-image: url(../images/what-the-hex.png);
 }
+
+
+@media screen and (max-width: 640px) {
+    .container {padding=left: 0;
+                padding-right: 0;
+                margin: 0;
+                max-width: 768px;} 
+}
+
+@media screen and (max-width: 768px) {
+    .container {padding-right: 0;
+                padding-left: 0;
+                margin: 0;
+                max-width: 768px;} 
+}
