--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,16 @@ body, html {
 body { background-image: url(../images/what-the-hex.png);
 }
 
+.card-body {
+    position: absolute;
+    top: 20%;
+    width: 100%;
+	height: 20%;
+}
+
 
 @media screen and (max-width: 640px) {
-    .container {padding=left: 0;
+    .container {padding-left: 0;
                 padding-right: 0;
                 margin: 0;
                 max-width: 768px;} 
