--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,9 @@ body { background-image: url(../images/what-the-hex.png);
                 margin: 0;
                 max-width: 768px;} 
 }
+
+@media screen and (min-width: 990px;) {
+    .card-text {line-height: 1;
+
+    }
+}
